--- a/src/components/sections/styles/hero.css
+++ b/src/components/sections/styles/hero.css
@@ -15,10 +15,23 @@
   color: white;
 }
 
+@media (min-width: 320px) {
+  .hero-wrapper {
+    margin-bottom: 2rem;
+  }
+  .greeting {
+    margin-top: 2rem;
+  }
+}
+
 @media (min-width: 1024px) {
   .hero-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
+}
+
+.header {
+  padding-top: 1px; /* PREVENT "MARGIN COLLAPSING"*/
 }
